force-app/main/default/objects/LXD_Endpoints__mdt/LXD_Endpoints__mdt.object-meta.xml
<CustomObject>
    <label>Endpoints</label>
    <pluralLabel>Endpoints</pluralLabel>
</CustomObject>