force-app/main/default/objects/LXD_Endpoints__mdt/fields/LXD_accessToken__c.field-meta.xml
<CustomField>
    <fullName>LXD_accessToken__c</fullName>
    <label>AccessToken</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>