force-app/main/default/objects/LXD_Endpoints__mdt/fields/LXD_funtion__c.field-meta.xml
<CustomField>
    <fullName>LXD_funtion__c</fullName>
    <label>Funtion</label>
    <type>TextArea</type>
</CustomField>