force-app/main/default/objects/LXD_Endpoints__mdt/fields/LXD_IsProduction__c.field-meta.xml
<CustomField>
    <fullName>LXD_IsProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProduction</label>
    <type>Checkbox</type>
</CustomField>