force-app/main/default/objects/LXD_Endpoints__mdt/fields/LXD_Url__c.field-meta.xml
<CustomField>
    <fullName>LXD_Url__c</fullName>
    <label>Url</label>
    <type>TextArea</type>
</CustomField>