force-app/main/default/objects/LXD_Endpoints__mdt/fields/LXD_usuario__c.field-meta.xml
<CustomField>
    <fullName>LXD_usuario__c</fullName>
    <label>Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>